task3 partly ok

--- a/VV570/PROJ2/tex/report.tex
+++ b/VV570/PROJ2/tex/report.tex
@@ -107,8 +107,13 @@
 	\end{enumerate}
 
 \section{Task 2}
-	With trival inequality analysis, the exact solution is given as $x=[0.5, 0, -\frac{\pi}{6}]$, which can be used for varification.\\
-	In general, the initial value for such a non-linear system is hard to know, even the range for each component is hard to estimate. In this case, the downhill simplex method can be applied to produce a fine inital guess for further calculation like newton or quasi-newton.\\
+	With trival inequality analysis, the exact solution is given as $x=[0.5, 0, -\frac{\pi}{6}]$, which can be used for varification.
+	\subsection{Solve directly}
+		Applying the fixed-point iteration, newton's method and the broyden's method to this non-linear system respectively, ...(TODO)
+	\subsection{Downhill simplex algorithm}
+	In general, the initial value for such a non-linear system is hard to know, even the range for each component is hard to estimate. In this case, the downhill simplex method can be applied to produce a fine inital guess for further calculation like newton or quasi-newton.
+	\subsection{Solve with initialization}
+	
 	Numerical experiments were done to identify the difference in terms of time cost. 
 	
 	\begin{center}
@@ -129,7 +134,7 @@
 \section{Task 3}
 	\begin{enumerate}[(a)]
 		\item 
-
+			
 		\item 
 
 		\item 
