--- a/VV556/HW1/submission.tex
+++ b/VV556/HW1/submission.tex
@@ -85,9 +85,77 @@
 \end{enumerate}
 
 \section{Exercise1.2}
-
+\begin{enumerate}
+	\item
+		The pointwise limit is given as follows
+		\begin{equation}
+			f = \left\{\begin{aligned}
+			0, & x = 0\\
+			1, & x\in(0,1]
+			\end{aligned}
+			\right.
+		\end{equation}
+		It's of uniform convergence as
+		\begin{equation}
+			\begin{aligned}
+				&  \lim\limits_{n\rightarrow\infty} \sup_{x\in[0, 1]} |f_n(x) - f(x)|\\
+				&=\left\{
+					\begin{aligned}
+						&0,  &x=0\\ 
+						&\lim\limits_{x\rightarrow 0,  n \rightarrow \infty} |x^{\frac{1}{n}} - 1|, & x \in (0, 1]
+					\end{aligned}
+					\right.\\
+				&=0
+			\end{aligned}
+		\end{equation}
+	\item 
+		The pointwise limit is given as
+		\begin{equation}
+			f(x) = x
+		\end{equation}
+		It's not of uniform convergence.
+	\item 
+		The pointwise limit is given as
+		\begin{equation}
+			f(x) = 0
+		\end{equation}
+		It's of uniform convergence as
+		\begin{equation}
+			\begin{aligned}
+				&	\lim\limits_{n\rightarrow\infty}\sup_{x\in(0, \infty)}|f_n(x) - f(x)|\\
+				& =\lim\limits_{n\rightarrow\infty}\sup_{x\in(0, \infty)}\Biggl|\sqrt{\frac{1}{n} + x} - \sqrt{x}\Biggr|\\
+				& =\lim\limits_{n\rightarrow\infty}\sup_{x\in(0, \infty)}\Biggl|\frac{1}{n(\sqrt{\frac{1}{n} + x} + \sqrt{x})}\Biggr|\\
+				& = \lim\limits_{n\rightarrow\infty, x \rightarrow 0}\frac{1}{n(\sqrt{\frac{1}{n} + x} + \sqrt{x})}\\
+				& = \lim\limits_{n\rightarrow\infty, x \rightarrow 0}\frac{1}{2n\sqrt{x}} = 0
+			\end{aligned}
+		\end{equation}
+\end{enumerate}
 
 \section{Exercise1.3}
+	\begin{enumerate}
+		\item 
+			Not figured out...
+		\item 
+			For example
+			\begin{equation}
+				a_n = \frac{1}{n}
+			\end{equation}
+		\item 
+			Consider a sequence constructed as follows
+			\begin{equation}
+				\begin{aligned}
+					& x_1 = \frac{1}{1} & (1^1=1 \ item)\\
+					& x_2 = ... = x_5 = \frac{1}{2} & (2^2=4 \ items)\\
+					& x_6 = ... = x_{32} = \frac{1}{3} & (3^3=27 \ items)\\
+					& ...
+				\end{aligned}
+			\end{equation}
+			This sequence certainly converges to 0. But not in $L^p$ for any $p>=1$ as
+			\begin{equation}
+				\sum_{n=1}^{\infty} = 1 + \frac{2^2}{2^p} + \frac{3^3}{3^p} + ... + \frac{n^n}{n^p} + ...
+			\end{equation}
+			for any $n > p$, $\frac{n^n}{n^p} > 1$.
+	\end{enumerate}
 
 
 \end{document}
