--- a/VM524/HW1/submission.tex
+++ b/VM524/HW1/submission.tex
@@ -84,11 +84,19 @@
   \end{equation}
   which can be written in material derivative format as
   \begin{equation}
-  	\frac{D\phi}{Dt} = \Gamma \nabla^2 \phi
+  	\frac{D}{Dt}\phi = \Gamma \nabla^2 \phi
   \end{equation}
   
 \section{Exercise2}
-
+  Let $X$ and $Y$ be 2 sequences of random numbers, the correlation coefficient of these 2 random variables is calculated as
+  \begin{equation}
+  	\rho_{XY} = \frac{cov(X, Y)}{\sqrt{E[X^2] E[Y^2]}}
+  \end{equation}
+  the covariance of $X$ and $Y$ is calculated as
+  \begin{equation}
+  	cov(X, Y) = E[(X-E[X])(Y-E[Y])] = E[XY] - E[X]E[Y]
+  \end{equation}
+  With $E[XY], E[X], E[Y], E[X^2], E[Y^2]$ provided, the correlation coefficient can be therefore calculated.
 \section{Exercise3}
 
 \section{Exercise4}
