--- a/VV556/HW3/submission.tex
+++ b/VV556/HW3/submission.tex
@@ -122,7 +122,11 @@
 			\label{fig:comp}
 		\end{figure}
 	
-		The distinction is quite obvious and Legendre polynomials does better than taylor series expansion at zero point.
+		The distinction is quite obvious and Legendre polynomials does better than taylor series expansion at zero point.\\
+		Further analysis indicates that the approximation error of $p(x)$ is given by
+		\begin{equation}
+			||\delta_2(x)||_2 = ||e^x - p(x)||_2 = \sqrt{\int_{-1}^{1} e^2(x) dx - \sum_{i=0}^{2} \frac{2 a_i ^2}{2i + 1}} = 0.0388
+		\end{equation}
 	
 	\end{enumerate}
 
